deploy/spin/k8s/postgres-backup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-backup
  namespace: aimm
spec:
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-aimm-postgres-backup
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: deployment-aimm-postgres-backup
    spec:
      containers:
        - env:
            - name: PGDATA
              value: /var/lib/postgresql/data/pgdata
            - name: POSTGRES_USER
              value: postgres
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: postgrespass
                  optional: false
          command: 
            - "sleep"
            - "999999"
          image: postgres:14
          imagePullPolicy: Always
          name: postgres
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 79966
          stdin: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          tty: true
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data-pv
            - mountPath: /backup
              name: db-backup
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 94721
      terminationGracePeriodSeconds: 30
      volumes:
        - name: postgres-data-pv
          persistentVolumeClaim:
            claimName: postrgres-pvc
        - hostPath:
            path: /global/cfs/projectdirs/m3792/aimm/backup
            type: Directory
          name: db-backup
