deploy/spin/k8s/tiled.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tiled
  namespace: aimm
spec:
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-aimm-tiled
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: deployment-aimm-tiled
    spec:
      affinity: {}
      containers:
        - command:
            - tiled
            - serve
            - config
          image: ghcr.io/bluesky/tiled:v0.1.0a109
          imagePullPolicy: Always
          name: tiled
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
            runAsUser: 79966
          stdin: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          tty: true
          volumeMounts:
            - mountPath: /config
              name: tiled-config
              readOnly: true
            - mountPath: /data
              name: tiled-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 94721
      terminationGracePeriodSeconds: 30
      volumes:
        - hostPath:
            path: /global/cfs/projectdirs/m3792/aimm/config
            type: Directory
          name: tiled-config
        - name: tiled-data
          persistentVolumeClaim:
            claimName: tiled-pvc
