deploy/spin/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tiled
  namespace: aimm
spec:
  rules:
    - host: tiled-ingress.aimm.production.svc.spin.nersc.org
      http:
        paths:
          - backend:
              service:
                name: tiled
                port:
                  number: 8000
            path: /
            pathType: ImplementationSpecific
    - host: aimm.lbl.gov
      http:
        paths:
          - backend:
              service:
                name: tiled
                port:
                  number: 8000
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - aimm.lbl.gov
      secretName: aimm
